--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,17 @@
       sans-serif;
   }
 }
+
+@layer components {
+  .card {
+    @apply rounded-xl border bg-gray-100 p-4;
+  }
+
+  .btn-gray {
+    @apply h-min rounded-xl border border-gray-300 bg-gray-200 px-2.5 py-2;
+  }
+
+  .badge-gray {
+    @apply rounded-full bg-gray-300 px-3 py-0.5;
+  }
+}
