fix: 메인로고 수정, 드롭다운 인덱스 오류 수정, 오디오 커스텀, 채팅 메뉴 수정

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@
       'Segoe UI Symbol',
       sans-serif;
   }
+  .bg-icon1 {
+    background-image: url('../assets/icons/chatbot-photo.svg';);
+    background-size: cover;
+  }
 
   ::-webkit-scrollbar {
     display: none;
@@ -57,6 +61,7 @@
   .profile-radio {
     @apply h-12 w-12 appearance-none rounded-full border-4 border-gray-200 bg-gray-200;
   }
+
 }
 
 @keyframes bounce {
